--- a/theblog/templates/article_details.html
+++ b/theblog/templates/article_details.html
@@ -18,6 +18,10 @@
 
 
  <br/><hr><br/>
+{% if post.header_image %}
+<img src= "{{ post.header_image.url}}">
+{% endif %}
+<br/>
 {{ post.body|safe }}
 
 <br/>
