--- a/theblog/templates/base.html
+++ b/theblog/templates/base.html
@@ -5,6 +5,8 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
+
+
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
 
@@ -19,73 +21,64 @@
 
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav mr-auto">
-
       {% if cat_menu %}
-       <li class="nav-item dropdown">
-        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+        <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
           Categories
-        </a>
-        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+          </a>
+          <div class="dropdown-menu" aria-labelledby="navbarDropdown">
 
-          {% for item in cat_menu %}
-           <a class="dropdown-item" href="{% url 'category' item|slugify %}"> 
+      {% for item in cat_menu %}
+          <a class="dropdown-item" href="{% url 'category' item|slugify %}"> 
            {{ item }}</a>
   
-          {% endfor %}
-          
-       
-       
-        </div>
+      {% endfor %}
+
+          </div>
       </li>
-    
-
- 
       {% endif %}
-
-
-
-
       {% if user.is_authenticated %}
         <li class="nav-item">
           <a class="nav-link" href="{% url 'add_post' %}">Add Post</a>
         </li>
 
-          <li class="nav-item">
+        <li class="nav-item">
           <a class="nav-link" href="{% url 'add_category' %}">Add Category</a>
         </li>
 
-         <li class="nav-item">
-          <a class="nav-link" href="{% url 'edit_profile' %}">Edit Profile</a>
-        </li>
+        <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+          Profile
+          </a>
+        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
 
+            <a class="dropdown-item" href="{% url 'edit_profile'  %}">Edit Settings</a>
+
+            <a class="dropdown-item" href="{% url 'edit_profile_page' user.profile.id %}">Edit Profile Page</a>
      
-
+            <a class="dropdown-item" href="{% url 'show_profile_page' user.profile.id %}">Show Profile Page</a>
+        </div>
+      </li>
         <li class="nav-item">
           <a class="nav-link" href="{% url 'logout' %}">Logout</a>
         </li>
-      {% else %}
+
+        {% else %}
+
         <li class="nav-item">
           <a class="nav-link" href="{% url 'register' %}">Register</a>
         </li>
 
         <li class="nav-item">
           <a class="nav-link" href="{% url 'login' %}">Login</a>
-        </li>
-
+      </li>
       {% endif %}
-    
-
-
-    
-   
     </ul>
-  
   </div>
 </nav>
     </br>
     <div class="container">
       {% block content %}
-
       {% endblock %}
     </div>
 
