--- a/theblog/templates/home.html
+++ b/theblog/templates/home.html
@@ -3,35 +3,39 @@
 
 
 
-<h1> Post </h1>
+<h1> Posts: </h1></br>
 <ul>
-	{% for post in object_list %}
-		<li>
-			<a href="{% url 'article-detail' post.pk %}">
-				{{ post.title }} 
-			</a>
-			- <a href="{% url 'category' post.category|slugify %}">{{ post.category }} </a>	
-		 	- {{ post.author.first_name }} {{ post.author.last_name }} 
-		 	- {{ post.post_date }} 
-
-			{% if user.is_authenticated %}
-				{% if user.id == post.author.id %}
-		 		-<a href="{% url 'update_post' post.pk %}" class='badge badge-info'>
-		 			Edit
-		 		</a> 
-
-		 		<a href="{% url 'delete_post' post.pk %}" class='badge badge-danger'>
-		 			Delete
-		 		</a>
-		 		{% endif %}
-
-			{% endif %}
-
-
-		 	<br/>
-		 	{{ post.snippet }}
+{% for post in object_list %}
+	<li>
+		<a href="{% url 'article-detail' post.pk %}">
+			{{ post.title }}- 
+		</a>
 			
-		</li>
+		<a href="{% url 'category' post.category|slugify %}">
+			in: {{ post.category }}- 
+		</a>	
+		{{ post.author.first_name }} 
+		{{ post.author.last_name }}- 
+		{{ post.post_date }}- 
+
+	{% if user.is_authenticated %}
+	{% if user.id == post.author.id %}
+		<a href="{% url 'update_post' post.pk %}" class='badge badge-info'>
+		 	Edit
+		 </a> 
+
+		 <a href="{% url 'delete_post' post.pk %}" class='badge badge-danger'>
+		 	Delete
+		 </a>
+
+	{% endif %}
+	{% endif %}
+
+
+	<br/>
+	{{ post.snippet }}
+			
+	</li>
 	{% endfor %}
 </ul>
 
