vertical nav bar

--- a/members/templates/registration/edit_profile.html
+++ b/members/templates/registration/edit_profile.html
@@ -4,12 +4,12 @@
 
 
 
-<h1> Edit Settings </h1><br/>
-<br/><br/>
+<h3> EDIT SETTINGS </h3><br/>
 
-{{ user.profile.bio }}
 
-<br/><br/>
+
+
+
 <div class="form-group">
 	<form method= "POST">
 		{% csrf_token %}
