--- a/members/templates/registration/user_profile.html
+++ b/members/templates/registration/user_profile.html
@@ -35,10 +35,10 @@
         	{% if page_user.profile.facebook_url %}
         	   <a href="{{ page_user.profile.facebook_url }}">Facebook | </a>
         	{% endif %}
-        
-        	{% if page_user.profile.twitter_url %}
-        	   <a href="{{ page_user.profile.twitter_url }}">Twitter | </a>
-        	{% endif %}
+            {% if page_user.profile.twitter_url %}
+               <a href="{{ page_user.profile.twitter_url }}">
+                Twitter | </a>
+            {% endif %}
         
         	{% if page_user.profile.instagram_url %}
         	   <a href="{{ page_user.profile.instagram_url }}">
