--- a/theblog/templates/article_details.html
+++ b/theblog/templates/article_details.html
@@ -3,7 +3,7 @@
 {% block title %}{{ post.title_tag }}{% endblock %}
 
 {% block content %}
-
+<div class= "home">
 
 <h1> {{ post.title }} </h1>
 
@@ -11,47 +11,62 @@
 
 {% if user.is_authenticated %}
 	{% if user.id == post.author.id %}
- 	- <a href="{% url 'update_post' post.pk %}" class='badge badge-info'>Edit</a>  <a href="{% url 'delete_post' post.pk %}" class='badge badge-danger'>Delete</a> 
-	
+ 	  - <a href="{% url 'update_post' post.pk %}" class='badge badge-info'>Edit</a>  
+        <a href="{% url 'delete_post' post.pk %}" class='badge badge-danger'>Delete</a>
+    {% endif %} 
 {% endif %}
-{% endif %} 
+  
+	
+  
+ 
+
+<div class="like-button">
+   <form action = "{% url 'like_post' post.pk %}" method = "POST">
+    {% csrf_token %}
+    {% if user.is_authenticated %}
+        {% if liked %}
+            <button type = "submit", name="post_id", value= "{{ post.id }}" class="btn btn-secondary btn-sm"> Unlike </button>
+        {% else %}
+            <button type = "submit", name="post_id", value= "{{ post.id }}" class="btn btn-primary btn-sm"> Like </button>
+        {% endif %}
+    {% else %}
+        <a href="{% url 'login' %}">Login</a> to like 
+    {% endif %}
+         - {{ total_likes }} Likes
+    </form>
+</div>
 
 
 
- <br/><hr><br/>
+ <hr>
 {% if post.header_image %}
-<img src= "{{ post.header_image.url}}">
+    <center>
+        <img src= "{{ post.header_image.url}}" width = "300">
+    </center>
 {% endif %}
 <br/>
 {{ post.body|safe }}
 
 <br/>
+
+<div class="back-button">
 <a href="{% url 'home' %}" class="btn btn-secondary">Back</a>
+</div>
 
 <hr>
 <br/>
 <form action = "{% url 'like_post' post.pk %}" method = "POST">
 	{% csrf_token %}
-{% if user.is_authenticated %}
-	{% if liked %}
-		<button type = "submit", name="post_id", value= "{{ post.id }}" class="btn btn-secondary btn-sm"> Unlike </button>
-	{% else %}
-		<button type = "submit", name="post_id", value= "{{ post.id }}" class="btn btn-primary btn-sm"> Like </button>
-	{% endif %}
-{% else %}
-	<a href="{% url 'login' %}">Login</a> to like 
-	{% endif %}
+</form>
 
+<br/><br/>
 
-	 - {{ total_likes }} Likes
-
-	</form>
-
-	<br/><br/>
-
+</div>
+<!---
 <div class="card mb-3">
   <div class="row no-gutters">
     <div class="col-md-2">
+
 
     {% if post.author.profile.profile_pic %}  
       <img src="{{ post.author.profile.profile_pic.url }}" class="card-img">
@@ -62,6 +77,7 @@
         <img src="{% static 'theblog/images/default.jpg' %}">
     {% endif %}
     </div>
+
     <div class="col-md-10">
       <div class="card-body">
         <h5 class="card-title">{{ post.author.first_name }} {{ post.author.last_name }}</h5>
@@ -76,17 +92,12 @@
         	{% if post.author.profile.facebook_url %}
         	   <a href="{{ post.author.profile.facebook_url }}">Facebook | </a>
         	{% endif %}
-        
-        	{% if post.author.profile.twitter_url %}
-        	   <a href="{{ post.author.profile.twitter_url }}">Twitter | </a>
-        	{% endif %}
+      
         
         	{% if post.author.profile.instagram_url %}
         	   <a href="{{ post.author.profile.instagram_url }}">Instagram | </a>
         	{% endif %}
-        	{% if post.author.profile.pinteres_url %}
-        	   <a href="{{ post.author.profile.pinteres_url }}">Pinterest </a>
-        	{% endif %}
+        
         <p class="card-text">
         	
         	{{ post.author.profile.bio }}
@@ -96,6 +107,7 @@
     </div>
   </div>
 </div>
+--->
 
 
 
