--- a/theblog/templates/categories.html
+++ b/theblog/templates/categories.html
@@ -3,6 +3,8 @@
 
 {% if category_posts %}
 
+<div class="home">
+
 <h1> {{ cats }} </h1>
 <ul>
 	{% for post in category_posts %}
@@ -38,6 +40,8 @@
 	<h2> Sorry this page does not exist </h2>
 
 {% endif %}
+
+</div>
 
 
 
