--- a/members/templates/registration/login.html
+++ b/members/templates/registration/login.html
@@ -3,7 +3,7 @@
 {% block content %}
 
 
-
+<div class="home">
 <h1> Login </h1>
 <div class="form-group">
 	<form method= "POST">
@@ -14,6 +14,8 @@
 	<br/>
 	<br/>
 	<br/>
+
+</div>
 
 
 
