--- a/members/templates/registration/register.html
+++ b/members/templates/registration/register.html
@@ -3,7 +3,7 @@
 {% block content %}
 
 
-
+<div class="home">
 <h1> Register </h1><br/>
 <div class="form-group">
 	<form method= "POST">
@@ -14,6 +14,8 @@
 	<br/>
 	<br/>
 	<br/>
+
+</div>
 
 
 
