--- a/theblog/templates/base.html
+++ b/theblog/templates/base.html
@@ -1,3 +1,4 @@
+{% load static %}
 <!doctype html>
 <html lang="en">
   <head>
@@ -10,11 +11,15 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
 
-    <title>{% block title %}Blog{% endblock %}</title>
+    <link rel="stylesheet" href= "{% static 'theblog/css/main.css' %}"/>
+
+    <title>{% block title %}Unicorn Methods{% endblock %}</title>
   </head>
   <body>
+
+    <!---
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-  <a class="navbar-brand" href="{% url 'home' %}">Blog</a>
+  <a class="navbar-brand" href="{% url 'home' %}">Unicorn Methods</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
@@ -37,6 +42,7 @@
           </div>
       </li>
       {% endif %}
+
       {% if user.is_authenticated %}
         <li class="nav-item">
           <a class="nav-link" href="{% url 'add_post' %}">Add Post</a>
@@ -50,15 +56,15 @@
           <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
           Profile
           </a>
-        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+          <div class="dropdown-menu" aria-labelledby="navbarDropdown">
 
             <a class="dropdown-item" href="{% url 'edit_profile'  %}">Edit Settings</a>
 
             <a class="dropdown-item" href="{% url 'edit_profile_page' user.profile.id %}">Edit Profile Page</a>
      
             <a class="dropdown-item" href="{% url 'show_profile_page' user.profile.id %}">Show Profile Page</a>
-        </div>
-      </li>
+          </div>
+       </li>
         <li class="nav-item">
           <a class="nav-link" href="{% url 'logout' %}">Logout</a>
         </li>
@@ -77,6 +83,81 @@
   </div>
 </nav>
     </br>
+    --->
+
+<div class="vertical"> 
+
+  
+
+  <ul>
+   
+    <li><a href="{% url 'home' %}">UNICORN METHODS</a></li>
+
+
+    {% if user.is_authenticated %} 
+ 
+    <li><a href="{% url 'add_post' %}">Add a Post</a></li>
+    <li><a href="{% url 'add_category' %}">Add a Category</a></li>
+    <li><a href="{% url 'logout' %}">Logout</a></li>
+   
+    <li class="nav-item dropdown">
+      <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+          Profile
+      </a>
+
+      <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+
+        <a class="dropdown-item" href="{% url 'edit_profile'  %}">
+          Edit Settings
+        </a>
+
+        <a class="dropdown-item" href="{% url 'edit_profile_page' user.profile.id %}">
+          Edit Profile Page
+        </a>
+     
+        <a class="dropdown-item" href="{% url 'show_profile_page' user.profile.id %}">
+          Show Profile Page
+        </a>
+      </div>
+    </li>  
+
+      {% else %}
+
+         <li><a href="{% url 'register' %}">Register</a></li>
+
+         <li><a href="{% url 'login' %}">Login</a></li>
+
+
+    {% endif %}
+
+
+
+
+    {% if cat_menu %}
+        <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+          Categories
+          </a>
+          <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+
+      {% for item in cat_menu %}
+          <a class="dropdown-item" href="{% url 'category' item|slugify %}"> 
+           {{ item }}</a>
+  
+      {% endfor %}
+
+          </div>
+      </li>
+      {% endif %}
+
+    
+
+  </ul>
+</div>
+
+
+
+
     <div class="container">
       {% block content %}
       {% endblock %}
