--- a/theblog/templates/category_list.html
+++ b/theblog/templates/category_list.html
@@ -3,11 +3,15 @@
 
 {% block content %}
 
+<div class="home">
+
 <h1> Blog Categories </h1>
 
  		{% for item in cat_menu_list %}
            <h4><a class="dropdown-item" href="{% url 'category' item|slugify %}"> {{ item }}</a></h4>
   
         {% endfor %}
+
+</div>
 
 {% endblock %}
