--- a/theblog/templates/home.html
+++ b/theblog/templates/home.html
@@ -3,8 +3,13 @@
 
 
 
-<h1> Posts: </h1></br>
+
+
+</br>
+
+<div class="home">
 <ul>
+
 {% for post in object_list %}
 	<li>
 		<a href="{% url 'article-detail' post.pk %}">
@@ -38,8 +43,7 @@
 	</li>
 	{% endfor %}
 </ul>
-
-
+</div>
 
 
 
