--- a/members/templates/registration/change-password.html
+++ b/members/templates/registration/change-password.html
@@ -3,7 +3,7 @@
 {% block content %}
 
 
-
+<div class="home">
 <h1> Change Password </h1>
 <div class="form-group">
 	<form method= "POST">
@@ -20,6 +20,8 @@
 	<br/>
 	<br/>
 	<br/>
+
+</div>
 
 
 
