--- a/members/templates/registration/edit_profile.html
+++ b/members/templates/registration/edit_profile.html
@@ -3,8 +3,8 @@
 {% block content %}
 
 
-
-<h3> EDIT SETTINGS </h3><br/>
+<div class="settings">
+</br><h3><center> EDIT SETTINGS</center> </h3><br/>
 
 
 
@@ -20,6 +20,6 @@
 	<br/>
 	<br/>
 
-
+</div>
 
 {% endblock %}
