--- a/members/templates/registration/login.html
+++ b/members/templates/registration/login.html
@@ -1,21 +1,24 @@
 {% extends 'base.html' %}
 {% block title %}Login{% endblock %}
 {% block content %}
+</br>
+</br>
+</br>
+<center>
+<div class="login">
+	<h3> LOGIN </h3></br>
+	<div class="form-group">
+		<form method= "POST">
+			{% csrf_token %}
+			{{ form.as_p }}
+			<button class="btn btn-secondary">Login</button>
+	</div>
+		<br/>
+		<br/>
+		<br/>
 
-
-<div class="home">
-<h1> Login </h1>
-<div class="form-group">
-	<form method= "POST">
-		{% csrf_token %}
-		{{ form.as_p }}
-		<button class="btn btn-secondary">Login</button>
 </div>
-	<br/>
-	<br/>
-	<br/>
-
-</div>
+</center>
 
 
 
