--- a/members/templates/registration/password_success.html
+++ b/members/templates/registration/password_success.html
@@ -2,10 +2,10 @@
 {% block title %}Password Updated{% endblock %}
 {% block content %}
 
-
+<div class="home">
 
 <h1> Password changed successfully </h1>
 
 
-
+</div>
 {% endblock %}
