--- a/members/templates/registration/register.html
+++ b/members/templates/registration/register.html
@@ -4,7 +4,7 @@
 
 
 <div class="home">
-<h1> Register </h1><br/>
+<br/><center><h1> Register </center></h1>
 <div class="form-group">
 	<form method= "POST">
 		{% csrf_token %}
