--- a/members/templates/registration/user_profile.html
+++ b/members/templates/registration/user_profile.html
@@ -2,9 +2,9 @@
 {% load static %}
 {% block content %}
 
-
-
-<h1> User Profile </h1>
+<div class="home">
+<br/>
+<h1><center>{{ page_user.user.first_name }}'s Profile</center> </h1>
 
 </br>
 
@@ -57,5 +57,5 @@
 </div>
 
 
-
+</div>
 {% endblock %}
