--- a/theblog/templates/add_post.html
+++ b/theblog/templates/add_post.html
@@ -6,7 +6,7 @@
 
 
 {% if user.is_authenticated %}
-	<h1> Add Post </h1>
+	</BR><h3 ><CENTER> ADD A POST</CENTER> </h3>
 	<div class="form-group">
 		<form method= "POST" enctype="multipart/form-data">
 			{% csrf_token %}
