--- a/members/templates/registration/edit_profile_page.html
+++ b/members/templates/registration/edit_profile_page.html
@@ -2,15 +2,15 @@
 {% block title %}Edit Profile Page{% endblock %}
 {% block content %}
 
-
+<div class= "home">
 {% if user.is_authenticated %}
 {% if user.id == profile.user.id %}
-	<h1> Edit Profile Page </h1>
+	<CENTER><BR/><h3> EDIT PROFILE </h3><BR/></CENTER>
 	<div class="form-group">
 		<form method= "POST" enctype="multipart/form-data">
 			{% csrf_token %}
 			{{ form.as_p }}
-			<button class="btn btn-secondary">Update Profile Page</button>
+			<button class="btn btn-secondary">Save</button>
 	</div>
 
 	
@@ -23,5 +23,5 @@
 ACCESS DENIED
 {% endif %}
 
-
+</div>
 {% endblock %}
