--- a/theblog/templates/update_post.html
+++ b/theblog/templates/update_post.html
@@ -2,10 +2,10 @@
 {% block title %}Edit Blog Post{% endblock %}
 {% block content %}
 
-
+<div class= "home">
 {% if user.is_authenticated %}
 	{% if user.id == post.author.id %}
-		<h1> Edit Post </h1>
+		<br/><h3><center> EDIT POST</center> </h3>
 		<div class="form-group">
 			<form method= "POST">
 				{% csrf_token %}
@@ -23,6 +23,8 @@ ACCESS DENIED
 	<br/>
 	<br/>
 	<br/>
+
+</div>
 
 
 
