--- a/theblog/templates/categories.html
+++ b/theblog/templates/categories.html
@@ -37,7 +37,10 @@
 </ul>
 
 {% else %}
-	<h2> Sorry this page does not exist </h2>
+
+	<div class="sorry">
+		<h2> Sorry this page does not exist </h2>
+	</div>
 
 {% endif %}
 
