--- a/static/theblog/css/main.css
+++ b/static/theblog/css/main.css
@@ -1,12 +1,33 @@
-.navbar-brand {
-  padding-left: 30px;
 
 
-
+.title {
+  padding-top: 5px;
 
 }
 
 
+.pagination nav {
+
+  padding-left: 600px;
+  padding-bottom: 20px;
+
+}
+
+.back {
+  padding-top: 10px;
+}
+
+
+.like {
+  text-align: right;
+  padding-top: 0;
+}
+
+
+.navbar-brand {
+  padding-left: 30px;
+
+}
 
 
 .settings {
@@ -55,12 +76,16 @@
   color: white;
 }
 
+
+
 .home {
   padding-left: 280px;
   padding-right: 75px;
-  padding-top: 5px;
+  padding-top: 0px;
 
 }
+
+
 
 
 .unicorn ul {
@@ -88,9 +113,16 @@
 
 .logout {
   text-align: right;
-  padding-right: 10px;
+  padding-right: 15px;
   padding-top: 10px;
 }
+
+.sorry {
+  padding-left: 300px;
+  padding-top: 100px;
+
+}
+
 
 
  
