--- a/theblog/templates/add_category.html
+++ b/theblog/templates/add_category.html
@@ -4,7 +4,7 @@
 
 <div class="home">
 {% if user.is_authenticated %}
-	<h3> ADD A CATEGORY </h3></br>
+	<h3><center><strong> ADD A CATEGORY</strong></center> </h3></br>
 	<div class="form-group">
 		<form method= "POST">
 			{% csrf_token %}
