--- a/theblog/templates/delete_post.html
+++ b/theblog/templates/delete_post.html
@@ -7,13 +7,13 @@
 
 {% if user.is_authenticated %}
 	{% if user.id == post.author.id %}
-	<h1> Delete Post </h1>
+
 	<br/><br/>
-	<h3> Delete: {{ post.title }} </h3></br>
+	
 	<div class="form-group">
 		<form method= "POST">
 			{% csrf_token %}
-			<strong> Are you sure? </strong><br/><br/>
+			<strong> Are you sure you want to delete "{{ post.title }}"? </strong><br/><br/>
 			<button class="btn btn-danger">Delete</button>
 	</div>
 	{% else %}
