--- a/theblog/templates/home.html
+++ b/theblog/templates/home.html
@@ -6,7 +6,7 @@
 
 
 <div class="home">
-<h2><center>Title- A Description of the Title </center></h2><br/>	
+<h3><center>Blog Posts </center></h3><br/>	
 <ul>
 
 {% for post in object_list %}
@@ -46,6 +46,26 @@
 	{% endfor %}
 </ul>
 </div>
+
+<!---
+<div class="pagination">
+	<nav aria-label="...">
+	  <ul class="pagination">
+	    <li class="page-item disabled">
+	      <a class="page-link" href="#" tabindex="-1" aria-disabled="true">Previous</a>
+	    </li>
+	    <li class="page-item"><a class="page-link" href="#">1</a></li>
+	    <li class="page-item active" aria-current="page">
+	      <a class="page-link" href="#">2 <span class="sr-only">(current)</span></a>
+	    </li>
+	    <li class="page-item"><a class="page-link" href="#">3</a></li>
+	    <li class="page-item">
+	      <a class="page-link" href="#">Next</a>
+	    </li>
+	  </ul>
+	</nav>
+</div>
+--->
 
 
 
